--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.0|^9.0"
+        "illuminate/database": "^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "*",
-        "friendsofphp/php-cs-fixer" : "*",
+        "friendsofphp/php-cs-fixer": "*",
         "phpunit/phpunit": "*"
     },
     "autoload": {
